--- a/watch.html
+++ b/watch.html
@@ -12,11 +12,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/menu.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
-
     <link rel="apple-touch-icon" sizes="57x57" href="/img/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/img/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/img/apple-icon-72x72.png">
@@ -48,14 +47,41 @@
     <meta property="og:url" content="https://nowtech.com.br"/>
     <meta property="og:site_name" content="Nowtech - Internet Fibra Ótica"/>
   </head>
-  <body>
-
+<body>
+    
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TWSDRZ9"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-
-    <navbar></navbar>
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+      <!-- End Google Tag Manager (noscript) -->
+<navbar class="container-navbar">
+  <div class="navbar-brand">
+      <div class="nav-link">
+            <a href="./watch.html"><img id="logo"src="./img/bkp-logo-navbar.png"/></a>
+              <nav id="nav">
+                  <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
+                    <span id="hamburger"></span>
+                  </button>
+                    <ul id="menu" role="menu">
+                      <li><a href="#">Sobre nós</a></li>
+                      <li><a href="#">Planos </a></li>
+                      <li><a href="#">Vantagens</a></li>
+                    <li><a href="#">sac</a></li>
+                  </ul>
+              </nav>
+              <div>
+                  <button class="area-cliente-botao"><a href="#">
+                    <img src="./img/bkp-imgs/SUPORTE-BOTAO.png" alt=""></a>
+                  </button>
+                    <button class="area-cliente-botao"><a href="#">
+                      <img class=""src="./img/bkp-imgs/AREA-BOTAO.png" alt=""></a>
+                    </button>
+                  <div id="ligamos-pra-voce">
+                <img src="./img/bkp-imgs/banner-ligacao.png" alt="">
+            </div>
+        </div>
+    </div>
+  </div>
+</navbar>
 
     <div class="first_div">
       <img src="img/banner-watch.jpg" alt="Watch" class="img-fluid">
@@ -106,10 +132,14 @@
     </div>
 
 
-    <footer></footer>
-
+    <footer class="container-fluid">
+      <div class="logo-rodape" >
+        <img src="./img/logo-rodape-nowtech.png" alt="">
+      
+      </div>
+    </footer>
+    <script src="assets/js/menu.js"></script>
     <script src="assets/js/imports.js"></script>
-
     <script src="assets/js/jquery-3.5.1.min.js"></script>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
