subindo pasta "planos.html"
subindo pasta feita por Fabiana porem não entendi o erro do css

--- a/watch.html
+++ b/watch.html
@@ -64,7 +64,7 @@
               </button>
                   <ul id="menu" role="menu">
                       <li><a href="#">Sobre nós</a></li>
-                      <li><a href="#">Planos</a></li>
+                      <li><a href="./planos.html">Planos</a></li>
                       <li><a href="#">Vantagens</a></li>
                     <li><a href="#">Sac</a></li>
                </ul>
